--- a/platform/papilio/SPARTCAM/papilio_one _spartcam.ucf
+++ b/platform/papilio/SPARTCAM/papilio_one _spartcam.ucf
@@ -85,27 +85,27 @@ NET TXD							LOC = "P90"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 #NET FLASH_SI					LOC = "P27"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
 #NET FLASH_SO					LOC = "P44"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP;
 
-NET LCD_DATA<14>				LOC = "P86"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<15>				LOC = "P84"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
-NET LCD_DATA<12>				LOC = "P79"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
-NET LCD_DATA<13>				LOC = "P70"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<10>				LOC = "P67"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<1>				LOC = "P65"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<0>				LOC = "P62"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<3>				LOC = "P60"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<2>				LOC = "P57"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
-NET LCD_DATA<5>				LOC = "P53"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<4>				LOC = "P40"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<7>				LOC = "P35"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<6>				LOC = "P33"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<9>				LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<8>				LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_DATA<11>				LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
+NET LCD_DATA<14>				LOC = "P86"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<15>				LOC = "P84"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ;
+NET LCD_DATA<12>				LOC = "P79"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ;
+NET LCD_DATA<13>				LOC = "P70"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<10>				LOC = "P67"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<1>				LOC = "P65"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<0>				LOC = "P62"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<3>				LOC = "P60"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<2>				LOC = "P57"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ;
+NET LCD_DATA<5>				LOC = "P53"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<4>				LOC = "P40"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<7>				LOC = "P35"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<6>				LOC = "P33"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<9>				LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<8>				LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET LCD_DATA<11>				LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
 
-NET LCD_CS						LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_RS						LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_WR						LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET LCD_RD						LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
+NET LCD_CS						LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP; 
+NET LCD_RS						LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP; 
+NET LCD_WR						LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP; 
+NET LCD_RD						LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP; 
 NET FIFO_DATA<1>				LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 NET FIFO_DATA<0>				LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 NET FIFO_DATA<3>				LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
