tryiing to solve timing issues ... timing constraint failing on synthesis but design is working

--- a/platform/papilio/SPARTCAM/papilio_one _spartcam.ucf
+++ b/platform/papilio/SPARTCAM/papilio_one _spartcam.ucf
@@ -67,8 +67,8 @@ CONFIG PART = XC3S250E-VQ100-4 ;
 #NET I_CLK_REF  TNM_NET = clk_ref_grp;
 #TIMESPEC TS01 = PERIOD : clk_ref_grp : 31.25ns : PRIORITY 1;   # 32.00 MHz
 
-#TIMESPEC TS11 = FROM:PADS:TO:FFS : 30 ns;
-#TIMESPEC TS12 = FROM:FFS:TO:PADS : 30 ns;
+TIMESPEC TS11 = FROM:PADS:TO:FFS : 30 ns;
+TIMESPEC TS12 = FROM:FFS:TO:PADS : 5 ns;
 
 NET CLK							LOC = "P89"  | IOSTANDARD = LVCMOS25 | PERIOD = 31.25ns; # 32.00 MHz oscillator
 
@@ -102,10 +102,10 @@ NET LCD_DATA<9>				LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  
 NET LCD_DATA<8>				LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
 NET LCD_DATA<11>				LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
 
-NET LCD_CS						LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP; 
-NET LCD_RS						LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP; 
-NET LCD_WR						LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP; 
-NET LCD_RD						LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP; 
+NET LCD_CS						LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
+NET LCD_RS						LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
+NET LCD_WR						LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
+NET LCD_RD						LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
 NET FIFO_DATA<1>				LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 NET FIFO_DATA<0>				LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 NET FIFO_DATA<3>				LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
@@ -129,9 +129,9 @@ NET CAM_DATA<4>				LOC = "P3"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 NET CAM_DATA<5>				LOC = "P4"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_DATA<6>				LOC = "P5"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_DATA<7>				LOC = "P9"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_XCLK					LOC = "P10"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ; 
-NET CAM_PCLK					LOC = "P11"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ; 
-NET CAM_HREF					LOC = "P12"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_VSYNC					LOC = "P15"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET CAM_XCLK					LOC = "P10"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PERIOD = 41.6ns; # 24Mhz
+NET CAM_PCLK					LOC = "P11"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | TNM_NET = TS11; 
+NET CAM_HREF					LOC = "P12"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | TNM_NET = TS11; 
+NET CAM_VSYNC					LOC = "P15"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | TNM_NET = TS11; 
 NET CAM_SIOD					LOC = "P16"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 NET CAM_SIOC					LOC = "P17"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
