--- a/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
+++ b/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
@@ -68,7 +68,6 @@ CONFIG PART = XC3S250E-VQ100-4 ;
 #TIMESPEC TS01 = PERIOD : clk_ref_grp : 31.25ns : PRIORITY 1;   # 32.00 MHz
 
 TIMESPEC TS11 = FROM:PADS:TO:FFS : 30 ns;
-TIMESPEC TS12 = FROM:FFS:TO:PADS : 10 ns;
 
 NET CLK							LOC = "P89"  | IOSTANDARD = LVCMOS25 | PERIOD = 31.25ns; # 32.00 MHz oscillator
 
@@ -85,27 +84,27 @@ NET TXD							LOC = "P90"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 #NET FLASH_SI					LOC = "P27"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
 #NET FLASH_SO					LOC = "P44"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP;
 
-NET BEAGLE_ALE						LOC = "P86"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_OEN						LOC = "P84"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ;
-NET BEAGLE_WRN						LOC = "P79"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ;
-NET BEAGLE_DATA<13>				LOC = "P70"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<12>				LOC = "P67"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<1>				LOC = "P65"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<0>				LOC = "P62"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<4>				LOC = "P60"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<5>				LOC = "P57"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ;
-NET BEAGLE_CSN						LOC = "P53"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<8>				LOC = "P40"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<11>				LOC = "P35"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<14>				LOC = "P33"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<15>				LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<10>				LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<9>				LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
+NET BEAGLE_DATA<5>			LOC = "P86"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
+NET BEAGLE_DATA<8>			LOC = "P84"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ;
+NET BEAGLE_DATA<11>			LOC = "P79"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP;
+NET BEAGLE_DATA<14>			LOC = "P70"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
+NET BEAGLE_DATA<15>			LOC = "P67"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
+NET BEAGLE_DATA<7>			LOC = "P65"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
+NET BEAGLE_DATA<6>			LOC = "P62"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
+NET BEAGLE_DATA<3>			LOC = "P60"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
+NET BEAGLE_DATA<2>			LOC = "P57"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ;
+NET BEAGLE_OEN					LOC = "P53"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
+NET BEAGLE_ALE					LOC = "P40"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
+NET BEAGLE_WRN					LOC = "P35"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
+NET BEAGLE_DATA<13>			LOC = "P33"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
+NET BEAGLE_DATA<12>			LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
+NET BEAGLE_DATA<9>			LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
+NET BEAGLE_DATA<10>			LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
 
-NET BEAGLE_DATA<3>			LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<2>			LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<7>			LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_DATA<6>			LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
+NET BEAGLE_CSN					LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP;
+NET BEAGLE_DATA<1>			LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
+NET BEAGLE_DATA<4>			LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
+NET BEAGLE_DATA<0>			LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
 NET FIFO_DATA<1>				LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 NET FIFO_DATA<0>				LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 NET FIFO_DATA<3>				LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
