designing fifo to be interface with cpu. Should work at frequency less than system fre (144mhz)

--- a/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
+++ b/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
@@ -107,18 +107,18 @@ NET BEAGLE_CSN					LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ;
 NET BEAGLE_DATA<1>			LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
 NET BEAGLE_DATA<4>			LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
 NET BEAGLE_DATA<0>			LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET FIFO_DATA<1>				LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET FIFO_DATA<0>				LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET FIFO_DATA<3>				LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET FIFO_DATA<2>				LOC = "P61"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET FIFO_DATA<5>				LOC = "P58"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
-NET FIFO_DATA<4>				LOC = "P54"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET FIFO_DATA<7>				LOC = "P41"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET FIFO_DATA<6>				LOC = "P36"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
-NET FIFO_CS						LOC = "P34"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
-NET FIFO_A0						LOC = "P32"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
-NET FIFO_WR						LOC = "P25"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
-NET FIFO_RD						LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
+NET BEAGLE_ADDR<6>			LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<7>			LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
+NET BEAGLE_ADDR<4>			LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<5>			LOC = "P61"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<1>			LOC = "P58"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ;
+NET BEAGLE_ADDR<3>			LOC = "P54"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<2>			LOC = "P41"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<0>			LOC = "P36"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET FIFO_CS						LOC = "P34"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET FIFO_A0						LOC = "P32"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET FIFO_WR						LOC = "P25"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET FIFO_RD						LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 
 NET ARAZB						LOC = "P91"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_RESET					LOC = "P92"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
