improving fifo example with gpmc of beaglebone

--- a/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
+++ b/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
@@ -69,7 +69,7 @@ CONFIG PART = XC3S250E-VQ100-4 ;
 
 TIMESPEC TS11 = FROM:PADS:TO:FFS : 30 ns;
 
-INST "Inst_dcm120/DCM_SP_INST" LOC = DCM_X0Y1;
+INST "Inst_dcm_32_120/DCM_SP_INST" LOC = DCM_X0Y1;
 
 NET CLK							LOC = "P89"  | IOSTANDARD = LVCMOS25 | PERIOD = 31.25ns; # 32.00 MHz oscillator
 
