improving signal timings

--- a/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
+++ b/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
@@ -70,57 +70,57 @@ CONFIG PART = XC3S250E-VQ100-4 ;
 TIMESPEC TS11 = FROM:PADS:TO:FFS : 30 ns;
 
 INST "Inst_dcm_32_120/DCM_SP_INST" LOC = DCM_X0Y1;
-PIN "Inst_dcm_32_24/DCM_SP_INST.CLKIN" CLOCK_DEDICATED_ROUTE = FALSE; # May lead to poor timing results
+#PIN "Inst_dcm_32_24/DCM_SP_INST.CLKIN" CLOCK_DEDICATED_ROUTE = FALSE; # May lead to poor timing results
 
 
 NET CLK							LOC = "P89"  | IOSTANDARD = LVCMOS25 | PERIOD = 31.25ns; # 32.00 MHz oscillator
 
-#NET JTAG_TMS					LOC = "P75"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
-#NET JTAG_TCK					LOC = "P77"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
-#NET JTAG_TDI					LOC = "P100" | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
-#NET JTAG_TDO					LOC = "P76"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
+#NET JTAG_TMS					LOC = "P75"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+#NET JTAG_TCK					LOC = "P77"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+#NET JTAG_TDI					LOC = "P100" | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+#NET JTAG_TDO					LOC = "P76"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 
 NET RXD							LOC = "P88"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 NET TXD							LOC = "P90"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 
-#NET FLASH_CS					LOC = "P24"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
-#NET FLASH_CK					LOC = "P50"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
-#NET FLASH_SI					LOC = "P27"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST ;
-#NET FLASH_SO					LOC = "P44"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP;
+#NET FLASH_CS					LOC = "P24"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+#NET FLASH_CK					LOC = "P50"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+#NET FLASH_SI					LOC = "P27"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+#NET FLASH_SO					LOC = "P44"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
 
-NET BEAGLE_DATA<5>			LOC = "P86"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
-NET BEAGLE_DATA<8>			LOC = "P84"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP;
-NET BEAGLE_DATA<11>			LOC = "P79"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP;
-NET BEAGLE_DATA<14>			LOC = "P70"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_DATA<15>			LOC = "P67"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_DATA<7>			LOC = "P65"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
-NET BEAGLE_DATA<6>			LOC = "P62"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
-NET BEAGLE_DATA<3>			LOC = "P60"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_DATA<2>			LOC = "P57"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ;
-NET BEAGLE_OEN					LOC = "P53"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_ALE					LOC = "P40"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_WRN					LOC = "P35"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_DATA<13>			LOC = "P33"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_DATA<12>			LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_DATA<9>			LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_DATA<10>			LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
+NET BEAGLE_DATA<5>			LOC = "P86"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
+NET BEAGLE_DATA<8>			LOC = "P84"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
+NET BEAGLE_DATA<11>			LOC = "P79"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
+NET BEAGLE_DATA<14>			LOC = "P70"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_DATA<15>			LOC = "P67"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_DATA<7>			LOC = "P65"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
+NET BEAGLE_DATA<6>			LOC = "P62"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
+NET BEAGLE_DATA<3>			LOC = "P60"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_DATA<2>			LOC = "P57"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;
+NET SPARE<3>					LOC = "P53"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET SPARE<2>					LOC = "P40"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET SPARE<1>					LOC = "P35"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_DATA<13>			LOC = "P33"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_DATA<12>			LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_DATA<9>			LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_DATA<10>			LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
 
-NET BEAGLE_CSN					LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP;
-NET BEAGLE_DATA<1>			LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
-NET BEAGLE_DATA<4>			LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP ; 
-NET BEAGLE_DATA<0>			LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST | PULLUP; 
-NET BEAGLE_ADDR<6>			LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
-NET BEAGLE_ADDR<7>			LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST  ; 
-NET BEAGLE_ADDR<4>			LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
-NET BEAGLE_ADDR<5>			LOC = "P61"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
-NET BEAGLE_ADDR<1>			LOC = "P58"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ;
-NET BEAGLE_ADDR<2>			LOC = "P54"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
-NET BEAGLE_ADDR<3>			LOC = "P41"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
-NET BEAGLE_ADDR<0>			LOC = "P36"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
-NET FIFO_CS						LOC = "P34"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
-NET FIFO_A0						LOC = "P32"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
-NET FIFO_WR						LOC = "P25"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
-NET FIFO_RD						LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET BEAGLE_CSN					LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
+NET BEAGLE_DATA<1>			LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
+NET BEAGLE_DATA<4>			LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
+NET BEAGLE_DATA<0>			LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_ADDR<6>			LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET BEAGLE_ADDR<7>			LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
+NET BEAGLE_ADDR<4>			LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET BEAGLE_ADDR<5>			LOC = "P61"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET BEAGLE_ADDR<1>			LOC = "P58"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET BEAGLE_ADDR<2>			LOC = "P54"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET BEAGLE_ADDR<3>			LOC = "P41"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET BEAGLE_ADDR<0>			LOC = "P36"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET BEAGLE_CSN					LOC = "P34"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET SPARE<0>					LOC = "P32"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET BEAGLE_WRN					LOC = "P25"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET BEAGLE_OEN					LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 
 NET ARAZB						LOC = "P91"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_RESET					LOC = "P92"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
@@ -132,9 +132,9 @@ NET CAM_DATA<4>				LOC = "P3"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 NET CAM_DATA<5>				LOC = "P4"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_DATA<6>				LOC = "P5"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_DATA<7>				LOC = "P9"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_XCLK					LOC = "P10"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PERIOD = 41.6ns; # 24Mhz
-NET CAM_PCLK					LOC = "P11"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | TNM_NET = TS11; 
-NET CAM_HREF					LOC = "P12"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | TNM_NET = TS11; 
-NET CAM_VSYNC					LOC = "P15"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | TNM_NET = TS11; 
+NET CAM_XCLK					LOC = "P10"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PERIOD = 41.6ns; # 24Mhz
+NET CAM_PCLK					LOC = "P11"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_HREF					LOC = "P12"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_VSYNC					LOC = "P15"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
 NET CAM_SIOD					LOC = "P16"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 NET CAM_SIOC					LOC = "P17"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
