Updating DCM and reset handling on LCD and SOBEL designs

--- a/platform/papilio/SPARTCAM/papilio_one _spartcam.ucf
+++ b/platform/papilio/SPARTCAM/papilio_one _spartcam.ucf
@@ -61,8 +61,8 @@
 # UCF File starts here, uncomment lines below as required #
 ###########################################################
 
-#CONFIG PART = XC3S500E-VQ100-4 ;
-CONFIG PART = XC3S250E-VQ100-4 ;
+CONFIG PART = XC3S500E-VQ100-4 ;
+#CONFIG PART = XC3S250E-VQ100-4 ;
 
 #NET I_CLK_REF  TNM_NET = clk_ref_grp;
 #TIMESPEC TS01 = PERIOD : clk_ref_grp : 31.25ns : PRIORITY 1;   # 32.00 MHz
@@ -121,14 +121,14 @@ NET FIFO_RD						LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | P
 
 NET ARAZB						LOC = "P91"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_RESET					LOC = "P92"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<0>				LOC = "P94"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<1>				LOC = "P95"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<2>				LOC = "P98"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<3>				LOC = "P2"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<4>				LOC = "P3"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<5>				LOC = "P4"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<6>				LOC = "P5"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<7>				LOC = "P9"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET CAM_DATA<0>				LOC = "P94"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<1>				LOC = "P95"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<2>				LOC = "P98"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<3>				LOC = "P2"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<4>				LOC = "P3"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<5>				LOC = "P4"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<6>				LOC = "P5"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<7>				LOC = "P9"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
 NET CAM_XCLK					LOC = "P10"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PERIOD = 41.6ns; # 24Mhz
 NET CAM_PCLK					LOC = "P11"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | TNM_NET = TS11; 
 NET CAM_HREF					LOC = "P12"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | TNM_NET = TS11; 
