--- a/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
+++ b/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
@@ -61,8 +61,8 @@
 # UCF File starts here, uncomment lines below as required #
 ###########################################################
 
-#CONFIG PART = XC3S500E-VQ100-4 ;
-CONFIG PART = XC3S250E-VQ100-4 ;
+CONFIG PART = XC3S500E-VQ100-4 ;
+#CONFIG PART = XC3S250E-VQ100-4 ;
 
 #NET I_CLK_REF  TNM_NET = clk_ref_grp;
 #TIMESPEC TS01 = PERIOD : clk_ref_grp : 31.25ns : PRIORITY 1;   # 32.00 MHz
@@ -88,50 +88,50 @@ NET TXD							LOC = "P90"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 #NET FLASH_SI					LOC = "P27"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 #NET FLASH_SO					LOC = "P44"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
 
-NET BEAGLE_DATA<5>			LOC = "P86"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
-NET BEAGLE_DATA<8>			LOC = "P84"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
-NET BEAGLE_DATA<11>			LOC = "P79"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
-NET BEAGLE_DATA<14>			LOC = "P70"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET BEAGLE_DATA<15>			LOC = "P67"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET BEAGLE_DATA<7>			LOC = "P65"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
-NET BEAGLE_DATA<6>			LOC = "P62"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
-NET BEAGLE_DATA<3>			LOC = "P60"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET BEAGLE_DATA<2>			LOC = "P57"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;
-NET SPARE<3>					LOC = "P53"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET SPARE<2>					LOC = "P40"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET SPARE<1>					LOC = "P35"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET BEAGLE_DATA<13>			LOC = "P33"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET BEAGLE_DATA<12>			LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET BEAGLE_DATA<9>			LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET BEAGLE_DATA<10>			LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
+NET BEAGLE_DATA<5>			LOC = "P86"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<8>			LOC = "P84"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11;
+NET BEAGLE_DATA<11>			LOC = "P79"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11;
+NET BEAGLE_DATA<14>			LOC = "P70"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11;
+NET BEAGLE_DATA<15>			LOC = "P67"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<7>			LOC = "P65"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<6>			LOC = "P62"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<3>			LOC = "P60"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<2>			LOC = "P57"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11;
+NET BEAGLE_OEN					LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | PULLDOWN | TNM_NET = TS11; 
+NET BEAGLE_ALE					LOC = "P40"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | PULLDOWN | TNM_NET = TS11; 
+NET BEAGLE_WRN					LOC = "P25"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | PULLDOWN | TNM_NET = TS11; 
+NET BEAGLE_DATA<13>			LOC = "P33"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<12>			LOC = "P26"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<9>			LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<10>			LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
 
-NET BEAGLE_CSN					LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
-NET BEAGLE_DATA<1>			LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
-NET BEAGLE_DATA<4>			LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; 
-NET BEAGLE_DATA<0>			LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ; 
-NET BEAGLE_ADDR<6>			LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET BEAGLE_ADDR<7>			LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
-NET BEAGLE_ADDR<4>			LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET BEAGLE_ADDR<5>			LOC = "P61"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET BEAGLE_ADDR<1>			LOC = "P58"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
-NET BEAGLE_ADDR<2>			LOC = "P54"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET BEAGLE_ADDR<3>			LOC = "P41"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET BEAGLE_ADDR<0>			LOC = "P36"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET BEAGLE_CSN					LOC = "P34"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
-NET SPARE<0>					LOC = "P32"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
-NET BEAGLE_WRN					LOC = "P25"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
-NET BEAGLE_OEN					LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET BEAGLE_CSN					LOC = "P34"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | PULLDOWN | TNM_NET = TS11;
+NET BEAGLE_DATA<1>			LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<4>			LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_DATA<0>			LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW | TNM_NET = TS11; 
+NET BEAGLE_ADDR<6>			LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<7>			LOC = "P66"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<4>			LOC = "P63"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<5>			LOC = "P61"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<1>			LOC = "P58"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ;
+NET BEAGLE_ADDR<2>			LOC = "P54"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<3>			LOC = "P41"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET BEAGLE_ADDR<0>			LOC = "P36"  | IOSTANDARD = LVTTL | DRIVE = 4 | SLEW = FAST ; 
+NET FIFO_CS						LOC = "P34"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET FIFO_A0						LOC = "P32"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET FIFO_WR						LOC = "P35"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
+NET FIFO_RD						LOC = "P53"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 
 NET ARAZB						LOC = "P91"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_RESET					LOC = "P92"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<0>				LOC = "P94"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<1>				LOC = "P95"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<2>				LOC = "P98"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<3>				LOC = "P2"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<4>				LOC = "P3"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<5>				LOC = "P4"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<6>				LOC = "P5"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
-NET CAM_DATA<7>				LOC = "P9"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET CAM_DATA<0>				LOC = "P94"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<1>				LOC = "P95"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<2>				LOC = "P98"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<3>				LOC = "P2"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<4>				LOC = "P3"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<5>				LOC = "P4"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<6>				LOC = "P5"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
+NET CAM_DATA<7>				LOC = "P9"   | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
 NET CAM_XCLK					LOC = "P10"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PERIOD = 41.6ns; # 24Mhz
 NET CAM_PCLK					LOC = "P11"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
 NET CAM_HREF					LOC = "P12"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | TNM_NET = TS11; 
