removing french references

--- a/platform/papilio/SPARTCAM/papilio_one _spartcam.ucf
+++ b/platform/papilio/SPARTCAM/papilio_one _spartcam.ucf
@@ -119,7 +119,7 @@ NET FIFO_A0						LOC = "P32"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | P
 NET FIFO_WR						LOC = "P25"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP;
 NET FIFO_RD						LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
 
-NET ARAZB						LOC = "P91"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET RESETN						LOC = "P91"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_RESET					LOC = "P92"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_DATA<0>				LOC = "P94"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_DATA<1>				LOC = "P95"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
