--- a/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
+++ b/platform/papilio/SPARTCAM/spartcam_beaglebone.ucf
@@ -122,7 +122,7 @@ NET SPARE<0>					LOC = "P32"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 NET BEAGLE_WRN					LOC = "P25"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ;
 NET BEAGLE_OEN					LOC = "P22"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 
-NET ARAZB						LOC = "P91"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
+NET RESETN						LOC = "P91"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_RESET					LOC = "P92"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_DATA<0>				LOC = "P94"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
 NET CAM_DATA<1>				LOC = "P95"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW ; 
