addinf fx2 communication interface, simplyfying camera interface

--- a/platform/papilio/SPARTCAM/papilio_one _spartcam_fx2.ucf
+++ b/platform/papilio/SPARTCAM/papilio_one _spartcam_fx2.ucf
@@ -103,7 +103,7 @@ NET FX2_FD<0>				LOC = "P23"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ;
 NET FX2_FD<3>				LOC = "P18"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW  ; 
 
 NET FX2_SLOE						LOC = "P85"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
-#NET FX2_FLAGA						LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
+NET FX2_FLAGA						LOC = "P83"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
 NET FX2_SLWR						LOC = "P78"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
 NET FX2_SLRD						LOC = "P71"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = FAST | PULLUP | TNM_NET = TS12; 
 NET FIFO_DATA<1>				LOC = "P68"  | IOSTANDARD = LVTTL | DRIVE = 8 | SLEW = SLOW | PULLUP; 
