--- a/platform/mark1/mark1_beaglebone_demo/mark1_beaglebone.ucf
+++ b/platform/mark1/mark1_beaglebone_demo/mark1_beaglebone.ucf
@@ -19,35 +19,35 @@ TIMESPEC TS_PER_CLK50 = PERIOD "clk50_grp" 20.0 ns;
 #######################
 
 ##### Bank 3 #####
-NET PMOD2_10           LOC = "P1"   ;# IO_L83N_VREF_3
-NET PMOD2_9            LOC = "P2"   ;# IO_L89P_3
-NET PMOD2_8            LOC = "P5"   ;# IO_L52N_3
-NET PMOD2_7            LOC = "P6"   ;# IO_L52P_3
-NET PMOD2_4            LOC = "P7"   ;# IO_L51N_3
-NET PMOD2_3            LOC = "P8"   ;# IO_L51P_3
-NET PMOD2_2            LOC = "P9"   ;# IO_L50N_3
-NET PMOD2_1           LOC = "P10"  ;# IO_L50P_3
-NET PMOD3_10           LOC = "P11"  ;# IO_L49N_3
-NET PMOD3_9           LOC = "P12"  ;# IO_L49P_3
-NET PMOD3_8            LOC = "P14"  ;# IO_L44N_GCLK20_3
-NET PMOD3_7            LOC = "P15"  ;# IO_L44P_GCLK21_3
-NET PMOD3_4            LOC = "P16"  ;# IO_L43N_GCLK22_IRDY2_3
-NET PMOD3_3            LOC = "P17"  ;# IO_L43P_GCLK23_3
-NET PMOD3_2            LOC = "P21"  ;# IO_L42N_GCLK24_3
-NET PMOD3_1            LOC = "P22"  ;# IO_L42P_GCLK25_TRDY2_3
-NET SYS_I2C_SCL   LOC = "P23"  ;# IO_L41N_GCLK26_3
-NET SYS_I2C_SDA   LOC = "P24"  ;# IO_L41P_GCLK27_3
-NET SYS_SPI_SCK   LOC = "P26"  ;# IO_L37N_3
-NET SYS_SPI_MISO  LOC = "P27"  ;# IO_L37P_3
-NET SYS_SPI_MOSI  LOC = "P29"  ;# IO_L36N_3
-NET SYS_SPI_SS    LOC = "P30"  ;# IO_L36P_3
-NET SYS_TX        LOC = "P32"  ;# IO_L2N_3
-NET SYS_RX        LOC = "P33"  ;# IO_L2P_3
-NET FTDI_RX       LOC = "P34"  ;# IO_L1N_VREF_3
-NET FTDI_TX       LOC = "P35"  ;# IO_L1P_3
+#NET PMOD2<7>           LOC = "P1"   ;# IO_L83N_VREF_3
+#NET PMOD2<6>            LOC = "P2"   ;# IO_L89P_3
+#NET PMOD2<5>            LOC = "P5"   ;# IO_L52N_3
+#NET PMOD2<4>            LOC = "P6"   ;# IO_L52P_3
+#NET PMOD2<3>            LOC = "P7"   ;# IO_L51N_3
+#NET PMOD2<2>            LOC = "P8"   ;# IO_L51P_3
+#NET PMOD2<1>            LOC = "P9"   ;# IO_L50N_3
+#NET PMOD2<0>           LOC = "P10"  ;# IO_L50P_3
+#NET PMOD3<7>           LOC = "P11"  ;# IO_L49N_3
+#NET PMOD3<6>           LOC = "P12"  ;# IO_L49P_3
+#NET PMOD3<5>            LOC = "P14"  ;# IO_L44N_GCLK20_3
+#NET PMOD3<4>            LOC = "P15"  ;# IO_L44P_GCLK21_3
+#NET PMOD3<3>            LOC = "P16"  ;# IO_L43N_GCLK22_IRDY2_3
+#NET PMOD3<2>            LOC = "P17"  ;# IO_L43P_GCLK23_3
+#NET PMOD3<1>            LOC = "P21"  ;# IO_L42N_GCLK24_3
+#NET PMOD3<0>            LOC = "P22"  ;# IO_L42P_GCLK25_TRDY2_3
+#NET SYS_I2C_SCL   LOC = "P23"  ;# IO_L41N_GCLK26_3
+#NET SYS_I2C_SDA   LOC = "P24"  ;# IO_L41P_GCLK27_3
+#NET SYS_SPI_SCK   LOC = "P26"  ;# IO_L37N_3
+#NET SYS_SPI_MISO  LOC = "P27"  ;# IO_L37P_3
+#NET SYS_SPI_MOSI  LOC = "P29"  ;# IO_L36N_3
+#NET SYS_SPI_SS    LOC = "P30"  ;# IO_L36P_3
+#NET SYS_TX        LOC = "P32"  ;# IO_L2N_3
+#NET SYS_RX        LOC = "P33"  ;# IO_L2P_3
+#NET FTDI_RX       LOC = "P34"  ;# IO_L1N_VREF_3
+#NET FTDI_TX       LOC = "P35"  ;# IO_L1P_3
 
 ##### Bank 2 #####
-NET SHIELD_RST    LOC = "P40"  ;# IO_L64N_D9_2
+#NET SHIELD_RST    LOC = "P40"  ;# IO_L64N_D9_2
 NET LED<0>        LOC = "P41"  ;# IO_L64P_D8_2
 NET LED<1>        LOC = "P43"  ;# IO_L62N_D6_2
 NET LED<2>        LOC = "P44"  ;# IO_L62P_D5_2
@@ -65,17 +65,17 @@ NET DIP_SW<0>     LOC = "P59"  ;# IO_L13N_D10_2
 NET DIP_SW<1>     LOC = "P61"  ;# IO_L12N_D2_MISO3_2
 NET DIP_SW<2>     LOC = "P62"  ;# IO_L12P_D1_MISO2_2
 NET DIP_SW<3>     LOC = "P66"  ;# IO_L2N_CMPMOSI_2
-NET ARD_SS        LOC = "P67"  ;# IO_L2P_CMPCLK_2
+#NET ARD_SS        LOC = "P67"  ;# IO_L2P_CMPCLK_2
 ##### Bank 1 #####
-NET T6            LOC = "P75"  ;# IO_L74P_AWAKE_1
-NET HDMI_D1_N     LOC = "P78"  ;# IO_L47N_1
-NET HDMI_D1_P     LOC = "P79"  ;# IO_L47P_1
-NET HDMI_D2_N     LOC = "P80"  ;# IO_L46N_1
-NET HDMI_D2_P     LOC = "P81"  ;# IO_L46P_1
-NET HDMI_D3_N     LOC = "P82"  ;# IO_L45N_1
-NET HDMI_D3_P     LOC = "P83"  ;# IO_L45P_1
-NET HDMI_D4_N     LOC = "P84"  ;# IO_L43N_GCLK4_1
-NET HDMI_D4_P     LOC = "P85"  ;# IO_L43P_GCLK5_1
+#NET T6            LOC = "P75"  ;# IO_L74P_AWAKE_1
+#NET HDMI_D1_N     LOC = "P78"  ;# IO_L47N_1
+#NET HDMI_D1_P     LOC = "P79"  ;# IO_L47P_1
+#NET HDMI_D2_N     LOC = "P80"  ;# IO_L46N_1
+#NET HDMI_D2_P     LOC = "P81"  ;# IO_L46P_1
+#NET HDMI_D3_N     LOC = "P82"  ;# IO_L45N_1
+#NET HDMI_D3_P     LOC = "P83"  ;# IO_L45P_1
+#NET HDMI_D4_N     LOC = "P84"  ;# IO_L43N_GCLK4_1
+#NET HDMI_D4_P     LOC = "P85"  ;# IO_L43P_GCLK5_1
 NET GPMC_CSN<2>     LOC = "P87"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L42N_GCLK6_TRDY1_1
 NET GPMC_CSN<1>     LOC = "P88"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L42P_GCLK7_1
 NET GPMC_CSN<0>     LOC = "P92"  | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L41N_GCLK8_1
@@ -99,24 +99,24 @@ NET GPMC_AD<7>   		 LOC = "P116" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW 
 NET GPMC_AD<2>    LOC = "P117" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L64P_SCP5_0
 NET GPMC_AD<1>    LOC = "P118" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L63N_SCP6_0
 NET GPMC_AD<0>    LOC = "P119" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L63P_SCP7_0
-NET PMOD4_10      LOC = "P120" ;# IO_L62N_VREF_0
-NET PMOD4_9       LOC = "P121" ;# IO_L62P_0
+#NET PMOD4<7>      LOC = "P120" ;# IO_L62N_VREF_0
+#NET PMOD4<6>       LOC = "P121" ;# IO_L62P_0
 NET GPMC_CLK      LOC = "P123" ;# IO_L37N_GCLK12_0
-NET PMOD4_8       LOC = "P124" ;# IO_L37P_GCLK13_0
-NET PMOD4_7       LOC = "P126" ;# IO_L36N_GCLK14_0
-NET PMOD4_4       LOC = "P127" ;# IO_L36P_GCLK15_0
-NET PMOD4_3       LOC = "P131" ;# IO_L35N_GCLK16_0
-NET PMOD4_2       LOC = "P132" ;# IO_L35P_GCLK17_0
-NET PMOD4_1       LOC = "P133" ;# IO_L34N_GCLK18_0
-NET GPMC_WE1N 			 LOC = "P134" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L34P_GCLK19_0
-NET PMOD1_4       LOC = "P137" ;# IO_L4N_0
-NET PMOD1_3       LOC = "P138" ;# IO_L4P_0
-NET PMOD1_2       LOC = "P139" ;# IO_L3N_0
-NET PMOD1_1       LOC = "P140" ;# IO_L3P_0
-NET LPC_CS_FPGA   LOC = "P141" ;# IO_L2N_0
-NET LPC_SCK       LOC = "P142" ;# IO_L2P_0
-NET LPC_MISO      LOC = "P143" ;# IO_L1N_VREF_0
-NET LPC_MOSI      LOC = "P144" ;# IO_L1P_HSWAPEN_0
+#NET PMOD4<5>       LOC = "P124" ;# IO_L37P_GCLK13_0
+#NET PMOD4<4>       LOC = "P126" ;# IO_L36N_GCLK14_0
+#NET PMOD4<3>       LOC = "P127" ;# IO_L36P_GCLK15_0
+#NET PMOD4<2>       LOC = "P131" ;# IO_L35N_GCLK16_0
+#NET PMOD4<1>      LOC = "P132" ;# IO_L35P_GCLK17_0
+#NET PMOD4<0>       LOC = "P133" ;# IO_L34N_GCLK18_0
+NET GPMC_WEN 			 LOC = "P134" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L34P_GCLK19_0
+#NET PMOD1<3>       LOC = "P137" ;# IO_L4N_0
+#NET PMOD1<2>       LOC = "P138" ;# IO_L4P_0
+#NET PMOD1<1>       LOC = "P139" ;# IO_L3N_0
+#NET PMOD1<0>       LOC = "P140" ;# IO_L3P_0
+#NET LPC_CS_FPGA   LOC = "P141" ;# IO_L2N_0
+#NET LPC_SCK       LOC = "P142" ;# IO_L2P_0
+#NET LPC_MISO      LOC = "P143" ;# IO_L1N_VREF_0
+#NET LPC_MOSI      LOC = "P144" ;# IO_L1P_HSWAPEN_0
 
 
 
