--- a/platform/mark1/mark1_beaglebone_demo/mark1_beaglebone.ucf
+++ b/platform/mark1/mark1_beaglebone_demo/mark1_beaglebone.ucf
@@ -101,7 +101,7 @@ NET GPMC_AD<1>    LOC = "P118" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;
 NET GPMC_AD<0>    LOC = "P119" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ; # IO_L63P_SCP7_0
 #NET PMOD4<7>      LOC = "P120" ;# IO_L62N_VREF_0
 #NET PMOD4<6>       LOC = "P121" ;# IO_L62P_0
-NET GPMC_CLK      LOC = "P123" ;# IO_L37N_GCLK12_0
+NET GPMC_CLK      LOC = "P123" | PERIOD = 10ns;# IO_L37N_GCLK12_0
 #NET PMOD4<5>       LOC = "P124" ;# IO_L37P_GCLK13_0
 #NET PMOD4<4>       LOC = "P126" ;# IO_L36N_GCLK14_0
 #NET PMOD4<3>       LOC = "P127" ;# IO_L36P_GCLK15_0
