small changes to ucf and main file

--- a/platform/mark1/mark1_beaglebone_demo/mark1_beaglebone.ucf
+++ b/platform/mark1/mark1_beaglebone_demo/mark1_beaglebone.ucf
@@ -35,8 +35,8 @@ TIMESPEC TS_PER_CLK50 = PERIOD "clk50_grp" 20.0 ns;
 #NET PMOD3<2>            LOC = "P17"  ;# IO_L43P_GCLK23_3
 #NET PMOD3<1>            LOC = "P21"  ;# IO_L42N_GCLK24_3
 #NET PMOD3<0>            LOC = "P22"  ;# IO_L42P_GCLK25_TRDY2_3
-#NET SYS_I2C_SCL   LOC = "P23"  ;# IO_L41N_GCLK26_3
-#NET SYS_I2C_SDA   LOC = "P24"  ;# IO_L41P_GCLK27_3
+NET SYS_I2C_SCL   LOC = "P23" | PULLUP ;# IO_L41N_GCLK26_3
+NET SYS_I2C_SDA   LOC = "P24" | PULLUP;# IO_L41P_GCLK27_3
 #NET SYS_SPI_SCK   LOC = "P26"  ;# IO_L37N_3
 #NET SYS_SPI_MISO  LOC = "P27"  ;# IO_L37P_3
 #NET SYS_SPI_MOSI  LOC = "P29"  ;# IO_L36N_3
